# rust-axum-with-google-oauth

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 20230718175857_trade.sql  20230827104051_initial.sql
src/: lib.rs  main.rs
src/routes/: error_handling.rs  middlewares.rs  mod.rs  oauth.rs  pages.rs
src/templates/: about.html  index.html  layout.html  profile.html
