[package]
name = "rust-axum-with-google-oauth-mongodb"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["headers", "macros"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
tokio = { version = "1.21.2", features = ["full"] }
mongodb = "2.4.0"
minijinja = "1.0.4"
oauth2 = "4.4.1"
uuid = "1.3"
reqwest = "0.11.18"
dotenvy = "0.15"
constant_time_eq = "0.3"
