[package]
name = "rust-axum-with-google-oauth"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
tokio = { version = "1.21.2", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
minijinja = { version = "2", features = ["loader"] }
oauth2 = "4.4.1"
uuid = { version = "1.3", features = ["v4"] }
reqwest = "0.12"
dotenvy = "0.15"
constant_time_eq = "0.3"
